get all post also changed the image upload to cloudinary

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=8000
 MONGODB_URI=mongodb+srv://mernauth:mernauth@cluster0.encst.mongodb.net/mernBlog
 JWT_SECRET_KEY=myscretekeyoooooh
+CLOUDINARY_NAME=ultra-brain
+CLOUDINARY_API_KEY=836124532939367
+CLOUDINARY_SECRET_KET=2OTpf8-vDakKCrpSd-x1ZYgccyA
