--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@coreui/react": "^5.0.0",
     "@reduxjs/toolkit": "^2.2.5",
     "formik": "^2.4.6",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
