--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@coreui/react": "^5.0.0",
     "@reduxjs/toolkit": "^2.2.5",
     "formik": "^2.4.6",
+    "jodit-react": "^4.1.2",
     "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
