--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "formik": "^2.4.6",
     "jodit-react": "^4.1.2",
+    "moment": "^2.30.1",
     "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
